[package]
name = "day-16"
version = "0.1.0"
authors = ["Gabriel Birke <gabriel.birke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fft"
path = "src/lib.rs"

[[bin]]
name = "output"
path = "src/main.rs"

[dependencies]
